# TaCAD2D

./: .clang-format  .gitignore  CMakeLists.txt  ReadMe.md
.github/workflows/: cmake-on-windows.yml  cmake-single-platform.yml  cmake-windows.yml
cmake/: CMakeLists.txt  SetupBoost.cmake  SetupOcct.cmake
cmake/Qt-Advanced-Docking-System/: CMakeLists.txt
ext/: CMakeLists.txt
ext/enumflags/: flags.hpp
res/: .$Resource.drawio.bkp  Resource.drawio
src/: CMakeLists.txt  Pch.hxx
src/App/: AppContext.hxx  MainWindow.cxx  MainWindow.hxx  MessagesPanel.hxx  ViewportView.cxx  ViewportView.hxx
src/Comm/: BaseObject.hxx  Color.hxx  Math.hxx  Memory.hxx  MessagePrinter.hxx  OcctHelper.hxx  ParameterSets.hxx  PropertyChanged.hxx  ResourceUtils.hxx  ShortcutHandler.hxx  Signal.hxx  SketchSolve.hxx
src/Core/: Application.cxx  Application.hxx  CoreContext.hxx  Document.cxx  Viewport.cxx  Workspace.cxx  Workspace.hxx
src/Core/Shapes/Sketch/: Sketch.cxx  Sketch.hxx  SketchConstraint.hxx  SketchConstraintSolver.hxx  SketchElement.hxx  SketchFactory.cxx  SketchFactory.hxx  SketchSegment.hxx  SketchUtils.cxx
src/Core/Shapes/Sketch/Segments/: SketchSegmentLine.hxx
src/Core/Topology/: Body.hxx  InteractiveEntity.hxx
src/Iact/: InteractiveContext.hxx  MouseEventData.hxx  WorkspaceController.cxx
src/Iact/Commands/: ModelCommands.hxx  SketchCommands.hxx
src/Iact/Framework/: Tool.hxx
src/Iact/Shapes/Primitives/: CreateBoxTool.hxx
src/Iact/Shapes/Sketch/: SketchSegmentCircleCreator.hxx  SketchTool.hxx  SketchToolMirror.hxx  SketchToolScale.hxx
src/Iact/ToolActions/: PointAction.hxx  ScaleSketchElementAction.hxx  SketchPointAction.hxx
src/Iact/Viewport/: ViewportWidget.hxx
src/Iact/Visual/: HintCircle.hxx  HintLine.hxx  Marker.cxx  VisualObject.hxx
src/Iact/Workspace/: Snap3D.hxx
src/Occt/OcctExtensions/: AIS_ViewCubeEx.hxx
src/Occt/OcctHelper/: PixMapHelper.hxx
src/Xcaf/Attributes/: BoxAttribute.hxx  ShapeAttribute.hxx  ShapeTool.hxx  ViewportAttribute.hxx  WorkspaceAttribute.hxx
test/: CMakeLists.txt
test/src/: CMakeLists.txt
